--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,13 +24,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  row-gap: 2.5vi;
-  width: 40vw;
-  height: 110vh;
+  row-gap: 1vi;
+  width: 30vw;
+  height: 87vh;
   padding-top: 2vi;
   margin-bottom: 2vi;
   background-color: white;
   margin-top: 4vi;
+}
+.login-container-3 input{
+  width: 22vw;
 }
 .login-container-2 h1{
   font-size: xx-large;
@@ -44,16 +47,27 @@
 .login-container-2 .submit{
   background-color: aquamarine;
   border-radius: 0.2vi;
-  height: 3.2vi;
+  height: 3.1vi;
   width: 8vi;
   border: none;
+  font-size: medium;
 }
 .login-container-2 .register{
+  font-size: medium;
   background-color: #4ea3ff;
   border: none;
   border-radius: 0.3vi;
   width: 8vi;
   height: 3.1vi;
+}
+.login-container-2 .forget-password{
+  font-size: 1.2vi;
+  background-color: transparent;
+  border: 1px solid black;
+  border-radius: 0.3vi;
+  width: 8vi;
+  height: 3.4vi;
+  margin-top: 1vi;
 }
 .login-container-2 button:hover{
   transform:scale(1.1);
@@ -64,11 +78,11 @@
   flex-direction: column;
   row-gap: 0.9vi;
 }
-<<<<<<< HEAD
+.login-container-2 .Lower-buttons{
+  display: flex;
+  column-gap: 2.5vi;
+}
 /* <<<<<<< HEAD */
-=======
-
->>>>>>> e0b64c6bc80d6c346087d4470f622645ae23b59b
 
 
 /***** Admin - page *****/ 
@@ -108,11 +122,7 @@ td {
 }
  /***** End Admin - page *****/
 
-<<<<<<< HEAD
 /* ======= */
-=======
-
->>>>>>> e0b64c6bc80d6c346087d4470f622645ae23b59b
 .login-top{
   padding: 1vi;
   border: 1px solid rgb(255, 255, 255);
@@ -144,15 +154,20 @@ td {
   flex-direction: column;
   align-items: center;
   row-gap: 4.5vh;
-  width: 40vw;
-  height: 100vh;
+  width: 35vw;
+  height: 90vh;
   padding-top: 2vh;
   margin-bottom: 6vh;
   background-color: white;
   border-top-color: #007bff;
   margin-top: 4vh;
 }
-
+.Register-container-2 h1{
+  font-size: x-large;
+}
+.input-group{
+  margin-right: 2vi;
+}
 .Register-container-3 label {
   color: #3f51ba;
 }
@@ -186,53 +201,19 @@ td {
   align-items: flex-start;
   color: #007bff;
 }
-<<<<<<< HEAD
+#name{
+  margin-left: 3.8vi;
+}
+#enrollment{
+  margin-left: 0.7vi;
+}
+#username{
+  margin-left: 1vi;
+}
+#password{
+  margin-left: 1.6vi;
+}
+#role{
+  margin-left: 5vi;
+}
 /* >>>>>>> 91b66dd79545fd39ffe1c92f9f04f38bbca7ea3a */
-=======
-.input-group {
-  display: flex;
-  align-items: center;
-  margin-bottom: 10px;
-}
-
-.input-group label {
-  width: 120px; /* Adjust width as needed */
-  margin-right: 10px;
-}
-.Register-Drop-box{
-  width: 13vw;
-}
-.Register-container-2 h1{
-  font-size: xx-large;
-}
-
- /***** Start of Student Portal - page *****/
- .student-portal-container {
-  display: flex;
-}
-
-.sidebar {
-  width: 200px; 
-  background-color: #f0f0f0;
-  padding: 20px;
-}
-
-.sidebar-item {
-  padding: 10px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.sidebar-item:hover {
-  background-color: #ddd;
-}
-
-.sidebar-item.active {
-  background-color: #ccc;
-}
-
-.main-content {
-  flex-grow: 1;
-  padding: 20px;
-}
->>>>>>> e0b64c6bc80d6c346087d4470f622645ae23b59b
