--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -64,55 +64,70 @@
   flex-direction: column;
   row-gap: 0.9vi;
 }
-<<<<<<< HEAD
-/* <<<<<<< HEAD */
-=======
-
->>>>>>> e0b64c6bc80d6c346087d4470f622645ae23b59b
-
 
 /***** Admin - page *****/ 
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;600;700&family=Lexend+Deca:wght@100;200;300;400;500;600;700&family=Poppins:wght@300;400;600&display=swap');
 
 table {
-  margin: 3rem auto;
-  border-radius: 2rem;
+  margin: 4rem auto;
+  border-radius: 0.5rem;
   border: 1rem hidden #004085;
   border-collapse: collapse;
   box-shadow: 0 0 0 1px black;
   overflow: hidden;
-  max-width: 60rem;
+  max-width: 8rem;
+  /* width: 100%; */
 }
 
 li, p, a, td{
-  font-size: 2rem;
-  line-height: 1.6;
+  font-size: 0.7rem;
+  line-height: 0.5rem;
 }
 
 thead {
-  font-size: 1.3rem;
+  /* font-size: 0.8rem; */
   background-color: #004085;
   color: #fff;
+  padding-top: 2rem;
 }
 
 th,
 td {
+  max-width: 11rem;
   border: 1px solid #004085;
-  min-width: 15rem;
-  padding: 1rem;
-  line-height: 1.2;
+  background-color: whitesmoke;
+  color: black;
+  min-width: 2rem;
+  padding: 1.5rem 0.2rem 0.2rem 0.2rem;
+  line-height: 1.5;
+  font-size: 0.9rem;
+}
+th {
+  border: 1px solid white;
+  background-color: #004085;
+  font-size: 1rem;
 }
 
 td {
-  font-size: 1.4rem;
+  font-size: 0.8rem;
+}
+input {
+  width: 8rem;
+}
+.checkbox {
+  width: 5rem;
+}
+input[type="checkbox"] {
+  width: 1rem; 
+  height: 1rem; 
+}
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none; 
 }
  /***** End Admin - page *****/
 
-<<<<<<< HEAD
 /* ======= */
-=======
-
->>>>>>> e0b64c6bc80d6c346087d4470f622645ae23b59b
 .login-top{
   padding: 1vi;
   border: 1px solid rgb(255, 255, 255);
@@ -186,53 +201,4 @@ td {
   align-items: flex-start;
   color: #007bff;
 }
-<<<<<<< HEAD
 /* >>>>>>> 91b66dd79545fd39ffe1c92f9f04f38bbca7ea3a */
-=======
-.input-group {
-  display: flex;
-  align-items: center;
-  margin-bottom: 10px;
-}
-
-.input-group label {
-  width: 120px; /* Adjust width as needed */
-  margin-right: 10px;
-}
-.Register-Drop-box{
-  width: 13vw;
-}
-.Register-container-2 h1{
-  font-size: xx-large;
-}
-
- /***** Start of Student Portal - page *****/
- .student-portal-container {
-  display: flex;
-}
-
-.sidebar {
-  width: 200px; 
-  background-color: #f0f0f0;
-  padding: 20px;
-}
-
-.sidebar-item {
-  padding: 10px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.sidebar-item:hover {
-  background-color: #ddd;
-}
-
-.sidebar-item.active {
-  background-color: #ccc;
-}
-
-.main-content {
-  flex-grow: 1;
-  padding: 20px;
-}
->>>>>>> e0b64c6bc80d6c346087d4470f622645ae23b59b
