--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -89,39 +89,63 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;600;700&family=Lexend+Deca:wght@100;200;300;400;500;600;700&family=Poppins:wght@300;400;600&display=swap');
 
 table {
-  margin: 3rem auto;
-  border-radius: 2rem;
+  margin: 4rem auto;
+  border-radius: 0.5rem;
   border: 1rem hidden #004085;
   border-collapse: collapse;
   box-shadow: 0 0 0 1px black;
   overflow: hidden;
-  max-width: 60rem;
+  max-width: 8rem;
+  /* width: 100%; */
 }
 
 li, p, a, td{
-  font-size: 2rem;
-  line-height: 1.6;
+  font-size: 0.7rem;
+  line-height: 0.5rem;
 }
 
 thead {
-  font-size: 1.3rem;
+  /* font-size: 0.8rem; */
   background-color: #004085;
   color: #fff;
+  padding-top: 2rem;
 }
 
 th,
 td {
+  max-width: 11rem;
   border: 1px solid #004085;
-  min-width: 15rem;
-  padding: 1rem;
-  line-height: 1.2;
+  background-color: whitesmoke;
+  color: black;
+  min-width: 2rem;
+  padding: 1.5rem 0.2rem 0.2rem 0.2rem;
+  line-height: 1.5;
+  font-size: 0.9rem;
+}
+th {
+  border: 1px solid white;
+  background-color: #004085;
+  font-size: 1rem;
 }
 
 td {
-  font-size: 1.4rem;
+  font-size: 0.8rem;
 }
- /***** End Admin - page *****/
-
+input {
+  width: 8rem;
+}
+.checkbox {
+  width: 5rem;
+}
+input[type="checkbox"] {
+  width: 1rem; 
+  height: 1rem; 
+}
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none; 
+}
+/** End Admin - page ***/
 /* ======= */
 .login-top{
   padding: 1vi;
