--- a/frontend/src/admin.css
+++ b/frontend/src/admin.css
@@ -109,6 +109,7 @@ label {
 }
 span {
     color: red;
+    font-weight: bold;
 }
 .drop-box {
     width: 18rem;
@@ -219,4 +220,34 @@ input[type="checkbox"] {
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none; 
+}
+
+
+/* status */
+.status-container {
+    height: 40vh;
+}
+.status-text p{
+    margin-left: 10px;
+    color: red;
+    font-size: 20px;
+    padding: 7px;
+}
+.status-content-1 {
+    display: flex;
+    flex-direction: row;
+}
+.status-session-content {
+    display: flex;
+    justify-content: center;
+    justify-content: center;
+    flex-direction: column;
+    margin: 5px;
+}
+
+/* bank */
+.bankAcc-text {
+    margin-left: 20px;
+    font-size: 30px;
+    font-weight: bold;
 }
