--- a/frontend/src/admin.css
+++ b/frontend/src/admin.css
@@ -125,7 +125,7 @@ span {
 }
 .btn {
     margin-left: 0.3rem;
-    background-color: #007bff;
+    background-color: #4285f4;
     cursor: pointer;
     color: white;
     padding: 5px;
@@ -135,6 +135,14 @@ span {
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
+}
+
+.btn:hover {
+    opacity: 1;
+    /* transform: scale(1.01); */
+    background-color: transparent;
+    border: 2px solid #4285f4;
+    color: #4285f4;
 }
 
 .scholarship-detail {
