--- a/frontend/src/pages/developer.css
+++ b/frontend/src/pages/developer.css
@@ -9,10 +9,13 @@
 h2 {
     font-size: 24px;
     margin-bottom: 20px;
+    border-bottom:2px solid #0056b3;
+    width: 16rem;
 }
 
 .form-group {
     margin-bottom: 20px;
+    font-size: 1.5rem;
 }
 
 label {
@@ -20,15 +23,15 @@ label {
     font-weight: bold;
 }
 
-input[type="text"] {
-    width: 100%;
+.developer-input {
+    width: 80%;
     padding: 10px;
     font-size: 16px;
     border: 1px solid #ccc;
     border-radius: 5px;
 }
 
-button[type="submit"] {
+/* button[type="submit"] {
     display: block;
     width: 100%;
     padding: 10px;
@@ -38,8 +41,8 @@ button[type="submit"] {
     border: none;
     border-radius: 5px;
     cursor: pointer;
-}
+} */
 
-button[type="submit"]:hover {
+/* button[type="submit"]:hover {
     background-color: #0056b3;
-}
+} */
